--- a/project.cbp
+++ b/project.cbp
@@ -7,9 +7,10 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Win32 Release">
-				<Option output="C:/Users/vatjuska.TESTLAB/Downloads/Omat Projektit/KDSAngband (Project)/Release/KDS" prefix_auto="1" extension_auto="1" />
+				<Option output="Release/DungeonGame" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="Release" />
 				<Option object_output="Release" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-W" />
@@ -36,10 +37,12 @@
 				</Linker>
 			</Target>
 			<Target title="Win32 Debug">
-				<Option output="C:/Users/vatjuska.TESTLAB/Downloads/Omat Projektit/KDSAngband (Project)/Debug/KDS" prefix_auto="1" extension_auto="1" />
+				<Option output="Debug/DungeonGame" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="Debug" />
 				<Option object_output="Debug" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-W" />
@@ -67,6 +70,9 @@
 				</Linker>
 			</Target>
 		</Build>
+		<Compiler>
+			<Add option="-static-libgcc" />
+		</Compiler>
 		<Linker>
 			<Add library="opengl32" />
 			<Add library="freeglut" />
